--- a/Builds/VisualStudio2008/WTP_InitMaker.vcproj
+++ b/Builds/VisualStudio2008/WTP_InitMaker.vcproj
@@ -47,7 +47,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\JuceLibraryCode"
+				AdditionalIncludeDirectories="..\..\JuceLibraryCode;c:\Juce\modules"
 				PreprocessorDefinitions="WIN32;_WINDOWS;DEBUG;_DEBUG;JUCER_VS2008_78A5006=1"
 				RuntimeLibrary="1"
 				RuntimeTypeInfo="true"
@@ -140,7 +140,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="1"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="..\..\JuceLibraryCode"
+				AdditionalIncludeDirectories="..\..\JuceLibraryCode;c:\Juce\modules"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;JUCER_VS2008_78A5006=1"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -447,6 +447,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\..\..\Juce\modules\juce_core\text\juce_StringRef.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\..\..\Juce\modules\juce_core\text\juce_TextDiff.cpp"
 						>
 						<FileConfiguration
@@ -564,6 +568,10 @@
 					</File>
 					<File
 						RelativePath="..\..\..\..\..\Juce\modules\juce_core\memory\juce_ByteOrder.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\..\..\Juce\modules\juce_core\memory\juce_ContainerDeletePolicy.h"
 						>
 					</File>
 					<File
@@ -1648,10 +1656,10 @@
 					</File>
 				</Filter>
 				<Filter
-					Name="json"
+					Name="javascript"
 					>
 					<File
-						RelativePath="..\..\..\..\..\Juce\modules\juce_core\json\juce_JSON.cpp"
+						RelativePath="..\..\..\..\..\Juce\modules\juce_core\javascript\juce_Javascript.cpp"
 						>
 						<FileConfiguration
 							Name="Debug|Win32"
@@ -1671,7 +1679,31 @@
 						</FileConfiguration>
 					</File>
 					<File
-						RelativePath="..\..\..\..\..\Juce\modules\juce_core\json\juce_JSON.h"
+						RelativePath="..\..\..\..\..\Juce\modules\juce_core\javascript\juce_Javascript.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\..\..\Juce\modules\juce_core\javascript\juce_JSON.cpp"
+						>
+						<FileConfiguration
+							Name="Debug|Win32"
+							ExcludedFromBuild="true"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+							/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32"
+							ExcludedFromBuild="true"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+							/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\..\..\..\..\Juce\modules\juce_core\javascript\juce_JSON.h"
 						>
 					</File>
 				</Filter>
@@ -1945,6 +1977,26 @@
 					<File
 						RelativePath="..\..\..\..\..\Juce\modules\juce_core\native\juce_BasicNativeHeaders.h"
 						>
+					</File>
+					<File
+						RelativePath="..\..\..\..\..\Juce\modules\juce_core\native\juce_linux_CommonFile.cpp"
+						>
+						<FileConfiguration
+							Name="Debug|Win32"
+							ExcludedFromBuild="true"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+							/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32"
+							ExcludedFromBuild="true"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+							/>
+						</FileConfiguration>
 					</File>
 					<File
 						RelativePath="..\..\..\..\..\Juce\modules\juce_core\native\juce_linux_Files.cpp"
@@ -2424,6 +2476,10 @@
 					</File>
 					<File
 						RelativePath="..\..\..\..\..\Juce\modules\juce_events\messages\juce_DeletedAtShutdown.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\..\..\Juce\modules\juce_events\messages\juce_Initialisation.h"
 						>
 					</File>
 					<File
@@ -3275,26 +3331,6 @@
 						>
 					</File>
 					<File
-						RelativePath="..\..\..\..\..\Juce\modules\juce_graphics\geometry\juce_RectangleList.cpp"
-						>
-						<FileConfiguration
-							Name="Debug|Win32"
-							ExcludedFromBuild="true"
-							>
-							<Tool
-								Name="VCCLCompilerTool"
-							/>
-						</FileConfiguration>
-						<FileConfiguration
-							Name="Release|Win32"
-							ExcludedFromBuild="true"
-							>
-							<Tool
-								Name="VCCLCompilerTool"
-							/>
-						</FileConfiguration>
-					</File>
-					<File
 						RelativePath="..\..\..\..\..\Juce\modules\juce_graphics\geometry\juce_RectangleList.h"
 						>
 					</File>
@@ -3302,26 +3338,6 @@
 				<Filter
 					Name="placement"
 					>
-					<File
-						RelativePath="..\..\..\..\..\Juce\modules\juce_graphics\placement\juce_Justification.cpp"
-						>
-						<FileConfiguration
-							Name="Debug|Win32"
-							ExcludedFromBuild="true"
-							>
-							<Tool
-								Name="VCCLCompilerTool"
-							/>
-						</FileConfiguration>
-						<FileConfiguration
-							Name="Release|Win32"
-							ExcludedFromBuild="true"
-							>
-							<Tool
-								Name="VCCLCompilerTool"
-							/>
-						</FileConfiguration>
-					</File>
 					<File
 						RelativePath="..\..\..\..\..\Juce\modules\juce_graphics\placement\juce_Justification.h"
 						>
@@ -6508,10 +6524,6 @@
 					</File>
 					<File
 						RelativePath="..\..\..\..\..\Juce\modules\juce_gui_basics\application\juce_Application.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\..\..\Juce\modules\juce_gui_basics\application\juce_Initialisation.h"
 						>
 					</File>
 				</Filter>
