--- a/Builds/VisualStudio2008/resources.rc
+++ b/Builds/VisualStudio2008/resources.rc
@@ -14,9 +14,9 @@ BEGIN
     BLOCK "040904E4"
     BEGIN
       VALUE "CompanyName",  "Robertsonics\0"
-      VALUE "FileDescription",  "WTP_InitMaker\0"
+      VALUE "FileDescription",  "WT-InitMaker\0"
       VALUE "FileVersion",  "1.0.0\0"
-      VALUE "ProductName",  "WTP_InitMaker\0"
+      VALUE "ProductName",  "WT-InitMaker\0"
       VALUE "ProductVersion",  "1.0.0\0"
     END
   END
