--- a/Builds/VisualStudio2008/WT-InitMaker.vcproj
+++ b/Builds/VisualStudio2008/WT-InitMaker.vcproj
@@ -109,6 +109,7 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory=".\Release"
+			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
